--- a/locales/hu.json
+++ b/locales/hu.json
@@ -51,6 +51,7 @@
     "meter": "méter",
     "meter-abbrev": "m",
     "plain-ascend": "Végpontok közötti szintkülönbség",
+    "stats-info": "Start drawing a route to get stats.",
     "total-energy": "Teljes energiafelhasználás",
     "travel-time": "Utazási idő"
   },
