--- a/locales/pl.json
+++ b/locales/pl.json
@@ -51,6 +51,7 @@
     "meter": "metrów",
     "meter-abbrev": "m",
     "plain-ascend": "Różnica wysokości",
+    "stats-info": "Start drawing a route to get stats.",
     "total-energy": "Całkowita energia",
     "travel-time": "Czas podróży"
   },
