--- a/locales/tr.json
+++ b/locales/tr.json
@@ -1,77 +1,77 @@
 {
   "about": {
-    "bug-reports": "Relatórios de erros e pedidos de novas funcionalidades:",
+    "bug-reports": "Bug reports and feature requests:",
     "bug-reports-back": "server / backend, routing engine, Android app, profiles, brouter.de site",
     "bug-reports-front": "web client / frontend.",
     "chat": "Chat with users and developers",
-    "contact": "Contacto:",
-    "data": "Dados:",
+    "contact": "İrtibat:",
+    "data": "Veri",
     "data-description": "This is based on <a href=\"https://www.openstreetmap.org\" target=\"_blank\">OpenStreetMap</a>. It is usually updated daily, see dates of <a href=\"https://brouter.de/brouter/segments4/\" target=\"_blank\">data files</a>.",
-    "description": "Online service of the BRouter routing engine. For the offline Android app and more information see <a href=\"https://brouter.de/\" target=\"_blank\">brouter.de</a>.",
+    "description": "Online service of the BRouter routing engine. For the offline Android app and more information see <a href=\"https://brouter.de/\" target=\"_blank\">brouter.de</a>",
     "details": "<i><a href=\"https://brouter.de/privacypolicy.html\" target=\"_blank\">Privacy Policy</a></i>, \n<i><a href=\"https://github.com/nrenner/brouter-web#credits-and-licenses\" target=\"_blank\">Credits</a></i>,\n<i><a href=\"https://github.com/nrenner/brouter-web/blob/master/CHANGELOG.md\" target=\"_blank\">Changelog</a></i> and\n<i><a href=\"https://github.com/nrenner/brouter-web#readme\" target=\"_blank\">more info</a></i> on the client.",
     "support": "General discussions/questions, support",
-    "title": "Sobre"
+    "title": "Hakkında"
   },
   "credits": {
     "brouter": "BRouter",
     "brouter-license": "<a target=\"_blank\" href=\"https://brouter.de/brouter\">BRouter</a> &copy; Arndt Brenschede",
-    "elevation-data": "Dados de elevação",
+    "elevation-data": "Elevation data",
     "esri-license": "<a target=\"_blank\" href=\"http://goto.arcgisonline.com/maps/World_Imagery\">World Imagery</a> &copy; <a target=\"_blank\" href=\"https://www.esri.com/\">Esri</a>, sources: Esri, DigitalGlobe, Earthstar Geographics, CNES/Airbus DS, GeoEye, USDA FSA, USGS, Getmapping, Aerogrid, IGN, IGP, and the GIS User Community",
     "esri-tiles": "Esri World Imagery",
-    "map-data": "Dados do mapa",
-    "map-tiles": "Map tiles",
+    "map-data": "Harita verisi",
+    "map-tiles": "Harita döşemeleri",
     "nominatim": "Search by <a href=\"https://wiki.openstreetmap.org/wiki/Nominatim\" target=\"_blank\" data-i18n=\"credits.nominatim\">Nominatim</a>",
     "openstreetmap": "&copy; <a target=\"_blank\" href=\"https://www.openstreetmap.org/copyright\" >OpenStreetMap contributors</a> under <a target=\"_blank\" href=\"https://opendatacommons.org/licenses/odbl/\" >ODbL</a>"
   },
   "export": {
-    "format": "Format",
+    "format": "Biçim",
     "format_csv": "CSV",
     "format_geojson": "GeoJSON",
     "format_gpx": "GPX",
     "format_kml": "KML",
     "include": "Include",
-    "include_waypoints": "Waypoints",
+    "include_waypoints": "Uğraknoktaları",
     "route-from-to": "{{from}} -> {{to}} ({{distance}}km)",
     "route-loop": "{{from}} ({{distance}}km)",
-    "title": "Export route",
-    "trackname": "Name"
+    "title": "Yolu dışa aktar",
+    "trackname": "İsim"
   },
   "footer": {
     "ascend": "Ascend",
     "cost": "Cost",
     "distance": "Distance",
     "energy-per-100km": "Energy per 100 km",
-    "hours": "hours",
-    "hours-abbrev": "h",
-    "kilometer": "kilometers",
+    "hours": "saatler",
+    "hours-abbrev": "s",
+    "kilometer": "kilometreler",
     "kilometer-abbrev": "km",
     "kilowatthour": "kilowatt hours",
     "kilowatthour-abbrev": "kWh",
     "mean-cost-factor": "Mean cost factor",
-    "meter": "meters",
+    "meter": "metreler",
     "meter-abbrev": "m",
     "plain-ascend": "Plain ascend",
     "stats-info": "Start drawing a route to get stats.",
     "total-energy": "Total Energy",
-    "travel-time": "Travel time"
+    "travel-time": "Seyahat zamanı"
   },
   "layers": {
     "add-base": "Add base layer",
     "add-overlay": "Add overlay",
-    "customize": "Customize layers",
+    "customize": "Katmanları özelleştir",
     "opacity-slider": "Opacity slider",
     "placeholder-layer-name": "Custom layer name. (ex: OpenStreetMap)",
     "placeholder-layer-url": "Custom layer URL. (ex: https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png)",
     "remove-selection": "Remove selection"
   },
   "loadNogos": {
-    "defaultProperties": "Default properties",
+    "defaultProperties": "Varsayılan özellikler",
     "file": "File (.geojson): ",
-    "load": "Load",
+    "load": "Yükle",
     "nogoBuffer": "Buffer no-go areas (in meters): ",
     "nogoRadius": "No-go radius for points (in meters): ",
     "nogoWeight": "No-go weight (-1 means impassable): ",
-    "source": "Source",
+    "source": "Kaynak",
     "title": "Load no-go areas",
     "url": "URL: "
   },
@@ -79,7 +79,7 @@
     "attribution-osm-long": "OpenStreetMap contributors",
     "attribution-osm-short": "OpenStreetMap",
     "clear-route": "Clear route data",
-    "copyright": "Copyright",
+    "copyright": "Telif",
     "cycling": "Cycling",
     "delete-last-point": "Delete last point",
     "delete-nogo-areas": "Delete all no-go areas",
