--- a/locales/nb.json
+++ b/locales/nb.json
@@ -51,6 +51,7 @@
     "meter": "meter",
     "meter-abbrev": "m",
     "plain-ascend": "Stigning",
+    "stats-info": "Start drawing a route to get stats.",
     "total-energy": "Total energi",
     "travel-time": "Reisetid"
   },
@@ -156,10 +157,10 @@
       "hiking-beta": "Hiking (beta)",
       "moped": "Moped",
       "rail": "Rail",
-      "river": "River",
-      "safety": "Safety",
-      "shortest": "Shortest",
-      "trekking": "Trekking bike",
+      "river": "Elv",
+      "safety": "Sikkerhet",
+      "shortest": "Kortest",
+      "trekking": "Tursykkel",
       "trekking-ignore-cr": "Trekking bike (ignore cycle routes)",
       "trekking-noferries": "Trekking bike (no ferries)",
       "trekking-nosteps": "Trekking bike (no steps)",
@@ -182,8 +183,8 @@
     "layers": {
       "category": {
         "base-layers": "Base layers",
-        "country": "Country",
-        "europe": "Europe",
+        "country": "Land",
+        "europe": "Europa",
         "europe-monolingual": "Europe monolingual",
         "overlays": "Overlays",
         "worldwide": "Worldwide",
@@ -191,39 +192,39 @@
         "worldwide-monolingual": "Worldwide monolingual"
       },
       "collapse": "Collapse all",
-      "custom-layers": "Custom layers",
+      "custom-layers": "Tilpassede lag",
       "customize": "Add or remove custom layers",
-      "expand": "Expand all",
+      "expand": "Utvid alt",
       "optional": "Add or remove optional layers",
-      "optional-layers": "More",
-      "overlay-opacity": "Overlay transparency",
+      "optional-layers": "Mer",
+      "overlay-opacity": "Overleggs transparens",
       "table": {
         "URL": "URL",
-        "empty": "No custom layer configured yet.",
-        "name": "Name",
+        "empty": "Ingen tilpasset lag konfigurert ennå.",
+        "name": "Navn",
         "type": "Type"
       },
-      "title": "Layers"
+      "title": "Lag"
     },
     "profile": {
-      "apply": "Apply",
+      "apply": "Anvende",
       "clear": "Clear",
-      "help": "Help",
-      "no_easy_configuration_warning": "No easy configuration is available for this profile.",
-      "options": "Options",
-      "placeholder": "Write your custom profile here.",
-      "profile": "Profile"
+      "help": "Hjelp",
+      "no_easy_configuration_warning": "Ingen enkel konfigurasjon er tilgjengelig for denne profilen.",
+      "options": "Alternativer",
+      "placeholder": "Skriv din tilpassede profil her.",
+      "profile": "Profil"
     }
   },
   "title": "BRouter web client",
   "warning": {
-    "cannot-get-route": "Error getting route URL",
-    "no-response": "no response from server",
+    "cannot-get-route": "Feil under mottak av rute-URL",
+    "no-response": "ingen svar fra serveren",
     "no-route-found": "Error: cannot find a route for given points. Maybe try to move them closer to roads?",
     "profile-error": "Profile error: no or empty response from server",
-    "strava-error": "Error getting Strava segments: {{error}}",
+    "strava-error": "Feil ved å skaffe Strava-segmenter: {{error}}",
     "temporary-profile": "<strong>Note:</strong> Uploaded custom profiles are only cached temporarily on the server.<br/>Please save your edits to your local PC.",
-    "tracks-load-error": "Error loading tracks: {{error}}",
+    "tracks-load-error": "Feil ved lasting av spor: {{error}}",
     "upload-error": "Upload error: {{error}}"
   }
 }
