Add missing shortcut tooltips to control buttons
Those shortcuts were already working before, but not really
discoverable for users.

To achieve a consistent UI and keep the wording in line with existing
conventions and future shortcuts (i.e. no whole sentences, shortcut in
parenthesis), the mute tooltip is changed again to occupy two lines (to
limit the width of the tooltip), to be less wordy (so it is faster to
read), to use the "mute" term (to help memorizing the M shortcut, at
least in English), and to align with the parenthesis style.

--- a/locales/en.json
+++ b/locales/en.json
@@ -118,7 +118,7 @@
       "edit": "Click to edit",
       "help": "&square; = move / resize, <span class=\"fa fa-trash-o\"></span> = delete,<br>click circle to quit editing"
     },
-    "opacity-slider": "Set transparency of route track and markers. Press and hold the 'M' key to temporarily hide the planned route.",
+    "opacity-slider": "Set transparency of route track and markers\n(Hold M key to mute temporarily)",
     "preview": "Preview",
     "privacy": "Privacy",
     "reverse-route": "Reverse route",
@@ -127,8 +127,8 @@
     "route-quality-incline": "Incline coding",
     "strava-biking": "Show Strava biking segments",
     "strava-running": "Show Strava running segments",
-    "zoomInTitle": "Zoom in",
-    "zoomOutTitle": "Zoom out"
+    "zoomInTitle": "Zoom in (+ key)",
+    "zoomOutTitle": "Zoom out (- key)"
   },
   "modal": {
     "close": "Close"
