--- a/locales/hu.json
+++ b/locales/hu.json
@@ -8,7 +8,7 @@
     "data": "Adatok:",
     "data-description": "Az alapja az <a href=\"https://www.openstreetmap.org\" target=\"_blank\">OpenStreetMap</a>, és általában naponta frissül (a konkrét időpontok az <a href=\"https://brouter.de/brouter/segments4/\" target=\"_blank\">adatfájlok</a> dátumában olvashatók).",
     "description": "Ez itt a BRouter útvonaltervező motor online szolgáltatása. Az Android alkalmazásról és a további információkról a <a href=\"https://brouter.de/\" target=\"_blank\">brouter.de</a> oldalon olvashat.",
-    "details": "<i><a href=\"https://brouter.de/privacypolicy.html\" target=\"_blank\">Adatvédelmi irányelvek</a></i> \n<i><a href=\"https://github.com/nrenner/brouter-web#credits-and-licenses\" target=\"_blank\">stáblista</a></i>,\n<i><a href=\"https://github.com/nrenner/brouter-web/blob/master/CHANGELOG.md\" target=\"_blank\">változásnapló</a></i> és\n<i><a href=\"https://github.com/nrenner/brouter-web#readme\" target=\"_blank\">további tájékoztatás</a></i> a kliensen.",
+    "details": "<i><a href=\"{{privacyPolicyUrl}}\" target=\"_blank\">Adatvédelmi irányelvek</a></i> \n<i><a href=\"https://github.com/nrenner/brouter-web#credits-and-licenses\" target=\"_blank\">stáblista</a></i>,\n<i><a href=\"https://github.com/nrenner/brouter-web/blob/master/CHANGELOG.md\" target=\"_blank\">változásnapló</a></i> és\n<i><a href=\"https://github.com/nrenner/brouter-web#readme\" target=\"_blank\">további tájékoztatás</a></i> a kliensen.",
     "support": "Általános viták/kérdések, támogatás",
     "title": "Névjegy"
   },
