--- a/locales/nb.json
+++ b/locales/nb.json
@@ -8,7 +8,7 @@
     "data": "Data:",
     "data-description": "Dette er basert på <a href=\"https://www.openstreetmap.org\" target=\"_blank\">OpenStreetMap</a>. Vanligvis blir det oppdatert daglig. Se dato på <a href=\"https://brouter.de/brouter/segments4/\" target=\"_blank\">datafilene</a>.",
     "description": "Online-tjenesten til BRounter rutemotoren. For offline Android-app og mer informasjon, se <a href=\"https://brouter.de/\" target=\"_blank\">brouter.de</a>",
-    "details": "<i><a href=\"https://brouter.de/privacypolicy.html\" target=\"_blank\">Personvernerklæring</a></i>, \n<i><a href=\"https://github.com/nrenner/brouter-web#credits-and-licenses\" target=\"_blank\">Kreditt</a></i>,\n<i><a href=\"https://github.com/nrenner/brouter-web/blob/master/CHANGELOG.md\" target=\"_blank\">Endringslogg</a></i> og\n<i><a href=\"https://github.com/nrenner/brouter-web#readme\" target=\"_blank\">mer informasjon</a></i> om klienten.",
+    "details": "<i><a href=\"{{privacyPolicyUrl}}\" target=\"_blank\">Personvernerklæring</a></i>, \n<i><a href=\"https://github.com/nrenner/brouter-web#credits-and-licenses\" target=\"_blank\">Kreditt</a></i>,\n<i><a href=\"https://github.com/nrenner/brouter-web/blob/master/CHANGELOG.md\" target=\"_blank\">Endringslogg</a></i> og\n<i><a href=\"https://github.com/nrenner/brouter-web#readme\" target=\"_blank\">mer informasjon</a></i> om klienten.",
     "support": "Generelle diskusjoner/spørsmål, støtte",
     "title": "Om"
   },
