--- a/locales/en.json
+++ b/locales/en.json
@@ -122,9 +122,9 @@
     "preview": "Preview",
     "privacy": "Privacy",
     "reverse-route": "Reverse route",
-    "route-quality-altitude": "Altitude coding",
-    "route-quality-cost": "Cost coding",
-    "route-quality-incline": "Incline coding",
+    "route-quality-altitude": "Altitude coding (C key to toggle)",
+    "route-quality-cost": "Cost coding (C key to toggle)",
+    "route-quality-incline": "Incline coding (C key to toggle)",
     "strava-biking": "Show Strava biking segments",
     "strava-running": "Show Strava running segments",
     "zoomInTitle": "Zoom in (+ key)",
