--- a/locales/en.json
+++ b/locales/en.json
@@ -110,7 +110,7 @@
       "topo": "OpenTopoMap"
     },
     "loading": "Loading…",
-    "locate-me": "Show me where I am",
+    "locate-me": "Show me where I am (L key)",
     "nogo": {
       "cancel": "Cancel drawing no-go area",
       "click-drag": "Click and drag to draw circle",
