Allow translation of the search field placeholder text
It was not translated before, since the string was coming from an
external dependency.

--- a/locales/en.json
+++ b/locales/en.json
@@ -91,6 +91,7 @@
     "draw-route-start": "Draw route (D key)",
     "draw-route-stop": "Stop drawing route (ESC key)",
     "enter-poi-name": "Enter Point of Interest name",
+    "geocoder-placeholder": "Search…",
     "hikebike-hillshading": "Hillshading",
     "hiking": "Hiking",
     "layer": {
