--- a/locales/en.json
+++ b/locales/en.json
@@ -180,6 +180,32 @@
     "itinerary": {
       "title": "Itinerary"
     },
+    "analysis": {
+      "title": "Analysis",
+      "header": {
+        "highway": "Highway",
+        "surface": "Surface",
+        "smoothness": "Smoothness"
+      },
+      "table": {
+        "category": "Category",
+        "length": "Length",
+        "total_known": "Total Known:",
+        "unknown": "Unknown"
+      },
+      "data": {
+        "highway": {
+          "living_street": "Living Street"
+        },
+        "surface": {
+          "fine_gravel": "Fine Gravel",
+          "paving_stones": "Paving Stones"
+        },
+        "smoothness": {
+          "very_bad": "Very Bad"
+        }
+      }
+    },
     "layers": {
       "category": {
         "base-layers": "Base layers",
