Add shortcut for clear route dialog
Use 'Backspace' to show the dialog allowing to clear the route.

The 'Del' key could then be used in the future to possibly allow to
delete individual selected items like POIs or no-go areas.

--- a/locales/en.json
+++ b/locales/en.json
@@ -80,6 +80,7 @@
     "attribution-osm-long": "OpenStreetMap contributors",
     "attribution-osm-short": "OpenStreetMap",
     "clear-route": "Clear route data",
+    "clear-route-tooltip": "Clear route data (Backspace key)",
     "copyright": "Copyright",
     "cycling": "Cycling",
     "delete-last-point": "Delete last point (Z key)",
